Adjusts styles for closer alignment with the final design - Updates HTML and CSS classes in the about, inside, signature, and reservation sections for better alignment with the proposed design - Refines margins, padding, and the order of certain elements for visual consistency across the interface - Ensures responsiveness and accessibility in all modifications made Note: Reviewing the compatibility of these changes with older browsers is still pending.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2035,7 +2035,7 @@ section .container .service .col {
     }
 
     #reservations-review .review-container .text-wraper {
-        margin: 150px auto;
+        margin: 70px auto;
         padding: 30px;
         width: 950px;
     }
